--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -28,6 +30,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "vite": "npm:rolldown-vite@7.1.12"
   },
@@ -38,7 +41,7 @@
   "main": "eslint.config.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Pavani-Kolavennu/S206_Repo_FEDF.git"
+    "url": "git+https://github.com/Pavani-Kolavennu/FEDF_Project_HeritageConnect.git"
   },
   "keywords": [],
   "author": "",
@@ -46,5 +49,5 @@
   "bugs": {
     "url": "https://github.com/Pavani-Kolavennu/FEDF_Project_HeritageConnect/issues"
   },
-  "homepage": "https://github.com/Pavani-Kolavennu/FEDF_Project_HeritageConnect#readme"
+  "homepage": "https://github.com/Pavani-Kolavennu/FEDF_Project_HeritageConnect"
 }
